--- a/sass/abstracts/_colors.scss
+++ b/sass/abstracts/_colors.scss
@@ -1,4 +1,4 @@
-// global color tokens
+// Global color tokens
 $-clr-white: hsl(0 0% 100%);
 $-clr-gray-100: hsl(0 0% 95%);
 $-clr-gray-200: hsl(0 0% 82.5%);
@@ -10,6 +10,7 @@ $-clr-gray-700: hsl(0 0% 30%);
 $-clr-gray-800: hsl(0 0% 17.5%);
 $-clr-gray-900: hsl(0 0% 7.5%);
 $-clr-black: hsl(0 0% 0%);
+
 $-clr-orange-100: hsl(24 75% 95%);
 $-clr-orange-200: hsl(24 75% 82.5%);
 $-clr-orange-300: hsl(24 75% 70%);
@@ -19,6 +20,7 @@ $-clr-orange-600: hsl(24 75% 40%);
 $-clr-orange-700: hsl(24 75% 30%);
 $-clr-orange-800: hsl(24 75% 17.5%);
 $-clr-orange-900: hsl(24 75% 7.5%);
+
 $-clr-yellow-100: hsl(48 75% 95%);
 $-clr-yellow-200: hsl(48 75% 82.5%);
 $-clr-yellow-300: hsl(48 75% 70%);
@@ -28,6 +30,7 @@ $-clr-yellow-600: hsl(48 75% 40%);
 $-clr-yellow-700: hsl(48 75% 30%);
 $-clr-yellow-800: hsl(48 75% 17.5%);
 $-clr-yellow-900: hsl(48 75% 7.5%);
+
 $-clr-yellowgreen-100: hsl(72 75% 95%);
 $-clr-yellowgreen-200: hsl(72 75% 82.5%);
 $-clr-yellowgreen-300: hsl(72 75% 70%);
@@ -37,6 +40,7 @@ $-clr-yellowgreen-600: hsl(72 75% 40%);
 $-clr-yellowgreen-700: hsl(72 75% 30%);
 $-clr-yellowgreen-800: hsl(72 75% 17.5%);
 $-clr-yellowgreen-900: hsl(72 75% 7.5%);
+
 $-clr-green-100: hsl(96 75% 95%);
 $-clr-green-200: hsl(96 75% 82.5%);
 $-clr-green-300: hsl(96 75% 70%);
@@ -46,6 +50,7 @@ $-clr-green-600: hsl(96 75% 40%);
 $-clr-green-700: hsl(96 75% 30%);
 $-clr-green-800: hsl(96 75% 17.5%);
 $-clr-green-900: hsl(96 75% 7.5%);
+
 $-clr-lime-100: hsl(144 75% 95%);
 $-clr-lime-200: hsl(144 75% 82.5%);
 $-clr-lime-300: hsl(144 75% 70%);
@@ -55,6 +60,7 @@ $-clr-lime-600: hsl(144 75% 40%);
 $-clr-lime-700: hsl(144 75% 30%);
 $-clr-lime-800: hsl(144 75% 17.5%);
 $-clr-lime-900: hsl(144 75% 7.5%);
+
 $-clr-turquoise-100: hsl(168 75% 95%);
 $-clr-turquoise-200: hsl(168 75% 82.5%);
 $-clr-turquoise-300: hsl(168 75% 70%);
@@ -64,6 +70,7 @@ $-clr-turquoise-600: hsl(168 75% 40%);
 $-clr-turquoise-700: hsl(168 75% 30%);
 $-clr-turquoise-800: hsl(168 75% 17.5%);
 $-clr-turquoise-900: hsl(168 75% 7.5%);
+
 $-clr-cyan-100: hsl(192 75% 95%);
 $-clr-cyan-200: hsl(192 75% 82.5%);
 $-clr-cyan-300: hsl(192 75% 70%);
@@ -73,6 +80,7 @@ $-clr-cyan-600: hsl(192 75% 40%);
 $-clr-cyan-700: hsl(192 75% 30%);
 $-clr-cyan-800: hsl(192 75% 17.5%);
 $-clr-cyan-900: hsl(192 75% 7.5%);
+
 $-clr-skyblue-100: hsl(216 75% 95%);
 $-clr-skyblue-200: hsl(216 75% 82.5%);
 $-clr-skyblue-300: hsl(216 75% 70%);
@@ -82,6 +90,7 @@ $-clr-skyblue-600: hsl(216 75% 40%);
 $-clr-skyblue-700: hsl(216 75% 30%);
 $-clr-skyblue-800: hsl(216 75% 17.5%);
 $-clr-skyblue-900: hsl(216 75% 7.5%);
+
 $-clr-blue-100: hsl(240 75% 95%);
 $-clr-blue-200: hsl(240 75% 82.5%);
 $-clr-blue-300: hsl(240 75% 70%);
@@ -91,6 +100,7 @@ $-clr-blue-600: hsl(240 75% 40%);
 $-clr-blue-700: hsl(240 75% 30%);
 $-clr-blue-800: hsl(240 75% 17.5%);
 $-clr-blue-900: hsl(240 75% 7.5%);
+
 $-clr-purple-100: hsl(264 75% 95%);
 $-clr-purple-200: hsl(264 75% 82.5%);
 $-clr-purple-300: hsl(264 75% 70%);
@@ -100,6 +110,7 @@ $-clr-purple-600: hsl(264 75% 40%);
 $-clr-purple-700: hsl(264 75% 30%);
 $-clr-purple-800: hsl(264 75% 17.5%);
 $-clr-purple-900: hsl(264 75% 7.5%);
+
 $-clr-magenta-100: hsl(288 75% 95%);
 $-clr-magenta-200: hsl(288 75% 82.5%);
 $-clr-magenta-300: hsl(288 75% 70%);
@@ -109,6 +120,7 @@ $-clr-magenta-600: hsl(288 75% 40%);
 $-clr-magenta-700: hsl(288 75% 30%);
 $-clr-magenta-800: hsl(288 75% 17.5%);
 $-clr-magenta-900: hsl(288 75% 7.5%);
+
 $-clr-pink-100: hsl(312 75% 95%);
 $-clr-pink-200: hsl(312 75% 82.5%);
 $-clr-pink-300: hsl(312 75% 70%);
@@ -118,6 +130,7 @@ $-clr-pink-600: hsl(312 75% 40%);
 $-clr-pink-700: hsl(312 75% 30%);
 $-clr-pink-800: hsl(312 75% 17.5%);
 $-clr-pink-900: hsl(312 75% 7.5%);
+
 $-clr-deeppink-100: hsl(336 75% 95%);
 $-clr-deeppink-200: hsl(336 75% 82.5%);
 $-clr-deeppink-300: hsl(336 75% 70%);
@@ -127,6 +140,7 @@ $-clr-deeppink-600: hsl(336 75% 40%);
 $-clr-deeppink-700: hsl(336 75% 30%);
 $-clr-deeppink-800: hsl(336 75% 17.5%);
 $-clr-deeppink-900: hsl(336 75% 7.5%);
+
 $-clr-red-100: hsl(0 75% 95%);
 $-clr-red-200: hsl(0 75% 82.5%);
 $-clr-red-300: hsl(0 75% 70%);
@@ -138,82 +152,82 @@ $-clr-red-800: hsl(0 75% 17.5%);
 $-clr-red-900: hsl(0 75% 7.5%);
 
 $light: (
-  "neutral": (
-    "000": $-clr-white,
-    "100": $-clr-gray-100,
-    "200": $-clr-gray-200,
-    "300": $-clr-gray-300,
-    "400": $-clr-gray-400,
-    "500": $-clr-gray-500,
-    "600": $-clr-gray-600,
-    "700": $-clr-gray-700,
-    "800": $-clr-gray-800,
-    "900": $-clr-gray-900,
-    "1000": $-clr-black,
-  ),
-  "accent": (
-    "100": $-clr-deeppink-100,
-    "200": $-clr-deeppink-200,
-    "300": $-clr-deeppink-300,
-    "400": $-clr-deeppink-400,
-    "500": $-clr-deeppink-500,
-    "600": $-clr-deeppink-600,
-    "700": $-clr-deeppink-700,
-    "800": $-clr-deeppink-800,
-    "900": $-clr-deeppink-900,
-  ),
-  "primary": (
-    "100": $-clr-skyblue-100,
-    "200": $-clr-skyblue-200,
-    "300": $-clr-skyblue-300,
-    "400": $-clr-skyblue-400,
-    "500": $-clr-skyblue-500,
-    "600": $-clr-skyblue-600,
-    "700": $-clr-skyblue-700,
-    "800": $-clr-skyblue-800,
-    "900": $-clr-skyblue-900,
-  ),
+    "neutral": (
+        "000": $-clr-white,
+        "100": $-clr-gray-100,
+        "200": $-clr-gray-200,
+        "300": $-clr-gray-300,
+        "400": $-clr-gray-400,
+        "500": $-clr-gray-500,
+        "600": $-clr-gray-600,
+        "700": $-clr-gray-700,
+        "800": $-clr-gray-800,
+        "900": $-clr-gray-900,
+        "1000": $-clr-black,
+    ),
+    "accent": (
+        "100": $-clr-deeppink-100,
+        "200": $-clr-deeppink-200,
+        "300": $-clr-deeppink-300,
+        "400": $-clr-deeppink-400,
+        "500": $-clr-deeppink-500,
+        "600": $-clr-deeppink-600,
+        "700": $-clr-deeppink-700,
+        "800": $-clr-deeppink-800,
+        "900": $-clr-deeppink-900,
+    ),
+    "primary": (
+        "100": $-clr-skyblue-100,
+        "200": $-clr-skyblue-200,
+        "300": $-clr-skyblue-300,
+        "400": $-clr-skyblue-400,
+        "500": $-clr-skyblue-500,
+        "600": $-clr-skyblue-600,
+        "700": $-clr-skyblue-700,
+        "800": $-clr-skyblue-800,
+        "900": $-clr-skyblue-900,
+    ),
 );
 
 $dark: (
-  "neutral": (
-    "1000": $-clr-white,
-    "900": $-clr-gray-100,
-    "800": $-clr-gray-200,
-    "700": $-clr-gray-300,
-    "600": $-clr-gray-400,
-    "500": $-clr-gray-500,
-    "400": $-clr-gray-600,
-    "300": $-clr-gray-700,
-    "200": $-clr-gray-800,
-    "100": $-clr-gray-900,
-    "000": $-clr-black,
-  ),
-  "accent": (
-    "900": $-clr-deeppink-900,
-    "800": $-clr-deeppink-800,
-    "700": $-clr-deeppink-700,
-    "600": $-clr-deeppink-600,
-    "500": $-clr-deeppink-500,
-    "400": $-clr-deeppink-400,
-    "300": $-clr-deeppink-300,
-    "200": $-clr-deeppink-200,
-    "100": $-clr-deeppink-100,
-  ),
-  "primary": (
-    "900": $-clr-skyblue-900,
-    "800": $-clr-skyblue-800,
-    "700": $-clr-skyblue-700,
-    "600": $-clr-skyblue-600,
-    "500": $-clr-skyblue-500,
-    "400": $-clr-skyblue-400,
-    "300": $-clr-skyblue-300,
-    "200": $-clr-skyblue-200,
-    "100": $-clr-skyblue-100,
-  ),
+    "neutral": (
+        "1000": $-clr-white,
+        "900": $-clr-gray-100,
+        "800": $-clr-gray-200,
+        "700": $-clr-gray-300,
+        "600": $-clr-gray-400,
+        "500": $-clr-gray-500,
+        "400": $-clr-gray-600,
+        "300": $-clr-gray-700,
+        "200": $-clr-gray-800,
+        "100": $-clr-gray-900,
+        "000": $-clr-black,
+    ),
+    "accent": (
+        "900": $-clr-deeppink-900,
+        "800": $-clr-deeppink-800,
+        "700": $-clr-deeppink-700,
+        "600": $-clr-deeppink-600,
+        "500": $-clr-deeppink-500,
+        "400": $-clr-deeppink-400,
+        "300": $-clr-deeppink-300,
+        "200": $-clr-deeppink-200,
+        "100": $-clr-deeppink-100,
+    ),
+    "primary": (
+        "900": $-clr-skyblue-900,
+        "800": $-clr-skyblue-800,
+        "700": $-clr-skyblue-700,
+        "600": $-clr-skyblue-600,
+        "500": $-clr-skyblue-500,
+        "400": $-clr-skyblue-400,
+        "300": $-clr-skyblue-300,
+        "200": $-clr-skyblue-200,
+        "100": $-clr-skyblue-100,
+    ),
 );
 
-// contextual color tokens
+// Contextual color tokens
 $color-neutral-000: var(--neutral-000);
 $color-neutral-100: var(--neutral-100);
 $color-neutral-200: var(--neutral-200);
