--- a/sass/abstracts/_mixins.scss
+++ b/sass/abstracts/_mixins.scss
@@ -5,31 +5,31 @@
 @use "tokens" as *;
 
 @mixin mq($size) {
-  @if map.has-key($breakpoints, $size) {
-    $breakpoint: map-get($breakpoints, $size);
-    @media screen and (min-width: $breakpoint) {
-      @content;
-    }
-  } @else if meta.type-of($size) == number {
-    @if math.is-unitless($size) {
-      @error 'when using a number with @mq() make sure to include a unit';
+    @if map.has-key($breakpoints, $size) {
+        $breakpoint: map-get($breakpoints, $size);
+        @media screen and (min-width: $breakpoint) {
+            @content;
+        }
+    } @else if meta.type-of($size) == number {
+        @if math.is-unitless($size) {
+            @error 'When using a number with @mq() make sure to include a unit.';
+        } @else {
+            @media screen and (min-width: $size) {
+                @content;
+            }
+        }
     } @else {
-      @media screen and (min-width: $size) {
-        @content;
-      }
+        @error 'The keyword #{$size} is not in the $breakpoints map.';
     }
-  } @else {
-    @error 'the keyword #{$size} is not in the $breakpoints map';
-  }
 }
 
 @mixin heading($fs, $color: $heading-color-default) {
-  font-size: $fs;
-  color: $color;
+    font-size: $fs;
+    color: $color;
 
-  font-family: $heading-font-family;
-  text-transform: $heading-text-transform;
-  letter-spacing: $heading-letter-spacing;
-  font-weight: $heading-font-weight;
-  line-height: $heading-line-height;
+    font-family: $heading-font-family;
+    text-transform: $heading-text-transform;
+    letter-spacing: $heading-letter-spacing;
+    font-weight: $heading-font-weight;
+    line-height: $heading-line-height;
 }
