--- a/sass/abstracts/_tokens.scss
+++ b/sass/abstracts/_tokens.scss
@@ -11,28 +11,23 @@ $color-background-default: $color-primary-100;
 $color-text-interactive-default: $color-accent-400;
 $color-text-interactive-hover: $color-accent-500;
 
-// set to 0 to disable
+// Set to 0 to disable
 $letter-spacing-loose: 0;
 
 $border-radius-1: $size-2;
 $border-radius-2: $size-4;
 
-$box-shadow-1: 0px 6px 5px rgb(0, 0, 0, 0.012),
-  0px 22px 18px rgb(0, 0, 0, 0.018), 0px 100px 80px rgb(0, 0, 0, 0.03);
+$box-shadow-1: 0px 6px 5px rgb(0, 0, 0, 0.012), 0px 22px 18px rgb(0, 0, 0, 0.018), 0px 100px 80px rgb(0, 0, 0, 0.03);
 
-$box-shadow-2: 0px 6px 5px rgb(0, 0, 0, 0.016),
-  0px 22px 18px rgb(0, 0, 0, 0.024), 0px 100px 80px rgb(0, 0, 0, 0.04);
+$box-shadow-2: 0px 6px 5px rgb(0, 0, 0, 0.016), 0px 22px 18px rgb(0, 0, 0, 0.024), 0px 100px 80px rgb(0, 0, 0, 0.04);
 
-$box-shadow-3: 0px 6px 5px rgb(0, 0, 0, 0.02), 0px 22px 18px rgb(0, 0, 0, 0.03),
-  0px 100px 80px rgb(0, 0, 0, 0.05);
+$box-shadow-3: 0px 6px 5px rgb(0, 0, 0, 0.02), 0px 22px 18px rgb(0, 0, 0, 0.03), 0px 100px 80px rgb(0, 0, 0, 0.05);
 
-$box-shadow-4: 0px 6px 5px rgb(0, 0, 0, 0.03), 0px 22px 18px rgb(0, 0, 0, 0.042),
-  0px 100px 80px rgb(0, 0, 0, 0.07);
+$box-shadow-4: 0px 6px 5px rgb(0, 0, 0, 0.03), 0px 22px 18px rgb(0, 0, 0, 0.042), 0px 100px 80px rgb(0, 0, 0, 0.07);
 
-$box-shadow-5: 0px 6px 5px rgb(0, 0, 0, 0.04), 0px 22px 18px rgb(0, 0, 0, 0.06),
-  0px 100px 80px rgb(0, 0, 0, 0.1);
+$box-shadow-5: 0px 6px 5px rgb(0, 0, 0, 0.04), 0px 22px 18px rgb(0, 0, 0, 0.06), 0px 100px 80px rgb(0, 0, 0, 0.1);
 
-// body
+// Body
 $body-font-family: $font-family-base;
 $body-font-size: $font-size-400;
 $body-line-height: 1.5;
@@ -42,6 +37,7 @@ $body-background-color: $color-background-default;
 
 $link-color: $color-text-interactive-default;
 $link-color-hover: $color-text-interactive-hover;
+$link-text-decoration: none;
 
 $heading-font-family: $font-family-accent;
 $heading-color-default: $color-neutral-900;
@@ -57,7 +53,7 @@ $heading-2-color: $heading-color-default;
 $heading-3-font-size: $font-size-700;
 $heading-3-color: $heading-color-default;
 
-// layout
+// Layout
 $grid-gap: $size-6;
 $flex-group-gap: $size-4;
 
@@ -69,7 +65,7 @@ $container-max-width: 64rem;
 $container-max-width-narrow: 40rem;
 $container-max-width-wide: 75rem;
 
-// site header
+// Site header
 $site-header-background-color: $color-primary-300;
 $site-header-color: $color-neutral-900;
 $site-header-padding: $size-8 0;
@@ -78,7 +74,7 @@ $site-header-jusitifcation-small-screens: center;
 $site-header-jusitifcation-large-screens: space-between;
 $site-header-alignment: center;
 
-//navigation
+// Navigation
 $navigation-color: $site-header-color;
 $navigation-color-hover: $color-primary-300;
 $navigation-font-size: $font-size-400;
@@ -87,7 +83,7 @@ $navigation-link-text-decoration: none;
 $navigation-font-family: $body-font-family;
 $navigation-font-weight: $body-font-weight;
 
-// site footer
+// Site footer
 $footer-background-color: $color-primary-300;
 $footer-text-color: $color-primary-900;
 $footer-link-color: $color-neutral-100;
@@ -95,7 +91,7 @@ $footer-link-color-hover: $color-primary-200;
 $footer-link-font-family: $font-family-accent;
 $footer-link-text-decoration: none;
 
-// buttons
+// Buttons
 $button-font-family: $body-font-family;
 $button-font-size: $font-size-400;
 $button-font-weight: $font-weight-bold;
@@ -113,7 +109,7 @@ $button-primary-background: $color-primary-700;
 $button-primary-color-hover: $color-neutral-100;
 $button-primary-background-hover: $color-primary-800;
 
-// cards
+// Cards
 $card-flow-spacing: $size-2;
 $card-padding: $size-8;
 $card-shadow: $box-shadow-1;
@@ -125,7 +121,7 @@ $card-line-height: 1.25;
 $card-heading-color-default: $card-color-default;
 $card-heading-font-size: $font-size-600;
 
-// forms
+// Forms
 $form-label-color: $body-text-color;
 $form-label-font-family: $body-font-family;
 $form-label-font-weight: $font-weight-bold;
