--- a/sass/base/_font-face.scss
+++ b/sass/base/_font-face.scss
@@ -1,28 +1,6 @@
 @font-face {
-  font-family: "Alegreya SC";
-  font-weight: 700;
-  font-display: swap;
-  src: url("/fonts/alegreyasc-bold-webfont.woff2") format("woff2"),
-    url("/fonts/alegreyasc-bold-webfont.woff") format("woff");
-}
-@font-face {
-  font-family: "Source Sans Pro";
-  font-weight: 400;
-  font-display: swap;
-  src: url("/fonts/sourcesanspro-regular-webfont.woff2") format("woff2"),
-    url("/fonts/sourcesanspro-regular-webfont.woff") format("woff");
-}
-@font-face {
-  font-family: "Source Sans Pro";
-  font-weight: 500;
-  font-display: swap;
-  src: url("/fonts/sourcesanspro-semibold-webfont.woff2") format("woff2"),
-    url("/fonts/sourcesanspro-semibold-webfont.woff") format("woff");
-}
-@font-face {
-  font-family: "Source Sans Pro";
-  font-weight: 700;
-  font-display: swap;
-  src: url("/fonts/sourcesanspro-bold-webfont.woff2") format("woff2"),
-    url("/fonts/sourcesanspro-bold-webfont.woff") format("woff");
+    font-family: "Trickster";
+    font-weight: 700;
+    font-display: swap;
+    src: local("Trickster"), url("trickster-COLRv1.otf") format("opentype") tech(color-COLRv1), url("trickster-outline.otf") format("opentype"), url("trickster-outline.woff") format("woff"), url("trickster-outline.woff2") format("woff2");
 }
