--- a/sass/base/_general.scss
+++ b/sass/base/_general.scss
@@ -1,18 +1,19 @@
 @use "../abstracts/" as *;
 
 body {
-  font-family: $body-font-family;
-  font-weight: $body-font-weight;
-  font-size: $body-font-size;
-  color: $body-text-color;
-  background-color: $body-background-color;
-  line-height: $body-line-height;
+    font-family: $body-font-family;
+    font-weight: $body-font-weight;
+    font-size: $body-font-size;
+    color: $body-text-color;
+    background-color: $body-background-color;
+    line-height: $body-line-height;
 }
 
 a {
-  color: $link-color;
-}
+    color: $link-color;
+    text-decoration: $link-text-decoration;
 
-a:is(:hover, :focus) {
-  color: $link-color-hover;
+    &:is(:hover, :focus) {
+        color: $link-color-hover;
+    }
 }
