--- a/sass/utilities/_flow.scss
+++ b/sass/utilities/_flow.scss
@@ -1,3 +1,3 @@
-.flow > *:where(:not(:first-child)) {
-  margin-top: var(--flow-spacer, 1em);
+.flow > * + * {
+    margin-top: var(--flow-spacer, 1em);
 }
