--- a/src/scss/abstracts/_functions.scss
+++ b/src/scss/abstracts/_functions.scss
@@ -2,12 +2,13 @@
 @use "colors" as *;
 @use "typography" as *;
 @use "sizes" as *;
+@use "tokens" as *;
 
 @function clr($color, $shade) {
-    @if map.has-key($colors, $color, $shade) {
-        @return map.get($colors, $color, $shade);
+    @if map.has-key($active-theme, $color, $shade) {
+        @return map.get($active-theme, $color, $shade);
     } @else {
-        @error '$colors does not have that color!';
+        @error '--clr-#{$color}-#{$shade} does not exist in your color scheme!';
     }
 }
 
