--- a/src/scss/utilities/_colors.scss
+++ b/src/scss/utilities/_colors.scss
@@ -3,10 +3,10 @@
 @each $color, $shade-map in $active-theme {
     @each $shade, $value in $shade-map {
         .clr-#{$color}-#{$shade} {
-            color: var(--#{$color}-#{$shade});
+            color: var(--clr-#{$color}-#{$shade});
         }
         .bg-#{$color}-#{$shade} {
-            background-color: var(--#{$color}-#{$shade});
+            background-color: var(--clr-#{$color}-#{$shade});
         }
     }
 }
